--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "basedpyright>=1.36.2",
+    "ruff>=0.14.10",
+]
