Configure pre-commit hooks with ruff for linting and formatting
- Add pre-commit and ruff to dev dependencies
- Create .pre-commit-config.yaml with local hooks for ruff check and ruff format
- Configure ruff to ignore lib/telegram.py (legacy code)
- Use local hooks with system language to work reliably on Windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,13 @@ dependencies = []
 dev = [
     "basedpyright>=1.36.2",
     "ruff>=0.14.10",
+    "pre-commit>=3.0.0",
 ]
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+exclude = ["lib/telegram.py"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W"]
